# fraudguard-ml

./: .dvcignore  .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  dvc.yaml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
configs/: base.yaml  serving.yaml  training.yaml
docker/: Dockerfile.api  Dockerfile.training  prometheus.yml
docs/: fraudguard_dashboard.html  index.html
scripts/: compare_models.py  generate_synthetic_data.py  run_backtest.py  run_training.py  smoke_test.py
src/: __init__.py
src/api/: app.py  dependencies.py  middleware.py
src/api/routes/: admin.py  health.py  predict.py
src/core/: config.py  exceptions.py  interfaces.py  schemas.py
src/data/ingestion/: batch_ingester.py  stream_consumer.py
src/data/validation/: __init__.py  validator.py
src/features/: behavioral.py  engineer.py  store.py  temporal.py
src/models/: ensemble.py  registry.py  tabtransformer.py  xgboost_model.py
src/monitoring/: alerting.py  drift_detector.py  metrics_collector.py
src/training/: evaluator.py  trainer.py  tuner.py
src/utils/: io.py  logging.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_drift_detector.py  test_evaluator.py  test_feature_engineer.py  test_xgboost_model.py
